fix: restart database schedule field
Schedule_at field is now correctly passed to patroni to schedule a restart operation for a later point.

PLAT-237
