# api/apiv1/gen/http/control_plane/server/types.go
@@ -100,13 +100,6 @@ type RestoreDatabaseRequestBody struct {
 	TargetNodes []string `form:"target_nodes,omitempty" json:"target_nodes,omitempty" xml:"target_nodes,omitempty"`
 }
 
-// RestartInstanceRequestBody is the type of the "control-plane" service
-// "restart-instance" endpoint HTTP request body.
-type RestartInstanceRequestBody struct {
-	// The time at which the restart is scheduled.
-	ScheduledAt *string `form:"scheduled_at,omitempty" json:"scheduled_at,omitempty" xml:"scheduled_at,omitempty"`
-}
-
 // InitClusterResponseBody is the type of the "control-plane" service
 // "init-cluster" endpoint HTTP response body.
 type InitClusterResponseBody struct {
@@ -4023,17 +4016,17 @@ func NewRestoreDatabasePayload(body *RestoreDatabaseRequestBody, databaseID stri
 
 // NewRestartInstancePayload builds a control-plane service restart-instance
 // endpoint payload.
-func NewRestartInstancePayload(body *RestartInstanceRequestBody, databaseID string, instanceID string) *controlplane.RestartInstancePayload {
-	v := &controlplane.RestartOptions{
+func NewRestartInstancePayload(body struct {
+	// The time at whcih the restart is scheduled.
+	ScheduledAt *string `form:"scheduled_at" json:"scheduled_at" xml:"scheduled_at"`
+}, databaseID string, instanceID string) *controlplane.RestartInstancePayload {
+	v := &controlplane.RestartInstancePayload{
 		ScheduledAt: body.ScheduledAt,
 	}
-	res := &controlplane.RestartInstancePayload{
-		RestartOptions: v,
-	}
-	res.DatabaseID = controlplane.Identifier(databaseID)
-	res.InstanceID = controlplane.Identifier(instanceID)
+	v.DatabaseID = controlplane.Identifier(databaseID)
+	v.InstanceID = controlplane.Identifier(instanceID)
 
-	return res
+	return v
 }
 
 // NewStopInstancePayload builds a control-plane service stop-instance endpoint
@@ -4224,15 +4217,6 @@ func ValidateRestoreDatabaseRequestBody(body *RestoreDatabaseRequestBody) (err e
 	}
 	if len(body.TargetNodes) > 9 {
 		err = goa.MergeErrors(err, goa.InvalidLengthError("body.target_nodes", body.TargetNodes, len(body.TargetNodes), 9, false))
-	}
-	return
-}
-
-// ValidateRestartInstanceRequestBody runs the validations defined on
-// Restart-InstanceRequestBody
-func ValidateRestartInstanceRequestBody(body *RestartInstanceRequestBody) (err error) {
-	if body.ScheduledAt != nil {
-		err = goa.MergeErrors(err, goa.ValidateFormat("body.scheduled_at", *body.ScheduledAt, goa.FormatDateTime))
 	}
 	return
 }
