# api/apiv1/gen/http/openapi.json
@@ -603,11 +603,19 @@
             "type": "string"
           },
           {
-            "name": "Restart-InstanceRequestBody",
+            "name": "object",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/RestartOptions"
+              "type": "object",
+              "properties": {
+                "scheduled_at": {
+                  "type": "string",
+                  "description": "The time at whcih the restart is scheduled.",
+                  "example": "2025-06-18T16:52:05Z",
+                  "format": "date-time"
+                }
+              }
             }
           }
         ],
@@ -5937,22 +5945,6 @@
       "required": [
         "task"
       ]
-    },
-    "RestartOptions": {
-      "title": "RestartOptions",
-      "type": "object",
-      "properties": {
-        "scheduled_at": {
-          "type": "string",
-          "description": "The time at which the restart is scheduled.",
-          "example": "2025-06-18T03:45:00Z",
-          "format": "date-time"
-        }
-      },
-      "description": "Options for restarting a Postgres instance.",
-      "example": {
-        "scheduled_at": "2025-06-18T03:45:00Z"
-      }
     },
     "RestoreConfigSpec": {
       "title": "RestoreConfigSpec",
